--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/cuinjune/chat-room#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dependencies": "^0.0.1",
     "express": "^4.17.1"
   }
 }
